@@ -1,3 +1,6 @@
+July 2024
+RISC-V filter. v0.13 format for delta filter.
+
 July 2023
 ZSTD and new filtering code ARM64
 
